Removes unused dependencies and adds express
Removes unnecessary dependencies from package-lock.json
Adds express to package.json for server functionality

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "dotenv": "^16.4.7"
+    "dotenv": "^16.4.7",
+    "express": "^4.17.1"
   },
   "name": "familienbaum",
   "version": "1.0.0",
