--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
   "dependencies": {
     "dotenv": "^16.4.7",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "sqlite3": "^5.1.7"
   },
   "name": "familienbaum",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
